--- a/KCASM_AppWeb/KCASM_AppWeb/Views/Patient/Patient.cshtml
+++ b/KCASM_AppWeb/KCASM_AppWeb/Views/Patient/Patient.cshtml
@@ -123,7 +123,7 @@
         <legend>Dati di accesso</legend>
         @if (ViewData["Session"].Equals("Patient"))
         {
-        <form id="form_login" method="post" action="/Patient/UpdatePassword">
+        <form id="form_login" method="post" action="/Patient/UpdateLogin">
             <div class="row">
                 <div>
                     <label>Indirizzo email</label>
