--- a/KCASM_AppWeb/KCASM_AppWeb/Views/Medic/Medic.cshtml
+++ b/KCASM_AppWeb/KCASM_AppWeb/Views/Medic/Medic.cshtml
@@ -20,11 +20,27 @@
                         <label>Numero di telefono</label>
                         <input class="form-control" type="text" name="phone" value="@Model.Phone" placeholder="@Model.Phone" required />
                         <label>Indirizzo dello studio</label>
-                        <input class="form-control" type="text" name="home_address" value="@Model.Address" placeholder="@Model.Address" required />
+                        <input class="form-control" type="text" name="address" value="@Model.Address" placeholder="@Model.Address" required />
                         <label>Sistema di notifiche</label>
                         <div class="col-md-2">
-                            Email <input type="checkbox" name="email_notify" value="@Model.Email_notify" />
-                            SMS <input type="checkbox" name="sms_notify" value="@Model.Sms_notify" />
+                            Email
+                            @if (Model.Email_notify)
+                            {
+                                <input type="checkbox" name="email_notify" value="true" checked />
+                            }
+                            else
+                            {
+                                <input type="checkbox" name="email_notify" value="true" />
+                            }
+                            SMS
+                            @if (Model.Sms_notify)
+                            {
+                                <input type="checkbox" name="sms_notify" value="true" checked />
+                            }
+                            else
+                            {
+                                <input type="checkbox" name="sms_notify" value="true" />
+                            }
                         </div>
                         <p>Specializzazione: @Model.Specialization</p>
                     </div>
@@ -38,18 +54,27 @@
         <legend>Dati Accesso</legend>
         <form id="form_settings" method="post" action="/Medic/UpdateLogin">
             <div class="row">
-                <label>Indirizzo email</label>
-                <input class="form-control" type="email" name="email" value="@Model.Email" placeholder="@Model.Email" required />
-                <label>Nuova Password</label>
-                <input class="form-control" type="email" name="new_password" value="" placeholder=""/>
-                <label>Conferma Nuova Password</label>
-                <input class="form-control" type="email" name="new_password2" value="" placeholder=""/>
-                <label>Reinserisci Vecchia Password</label>
-                <input class="form-control" type="email" name="old_password" value="" placeholder="" required />
+                <div>
+                    <label>Indirizzo email</label>
+                    <input class="form-control" type="email" name="email" value="@Model.Email" placeholder="@Model.Email" required />
+                </div>
+                <div>
+                    <label>Vecchia password</label>
+                    <input class="form-control" type="password" name="old_password" required />
+                </div>
+                <div>
+                    <label>Nuova password</label>
+                    <input class="form-control" type="password" name="new_password" />
+                </div>
+                <div>
+                    <label>Conferma della nuova password</label>
+                    <input class="form-control" type="password" name="new_password2" />
+                </div>
+            </div>
+            <div class="col-md-1">
+                <input class="btn btn-primary" type="submit" value="Aggiorna dati" />
             </div>
         </form> 
-
-            <!-- possibile form di selezione paziente -->
 
             <p style="font: 30px sans-serif; margin-top: 1.5em;">Elenco di tutte le pazienti</p>
             <div id="medic"></div>
@@ -57,10 +82,11 @@
                 $(document).ready(function () {
                     $("#medic").kendoGrid({
                         dataSource: {
-                            data: @Model.Patients,
+                            data: @Json.Serialize(Model.Patients),
                             schema: {
                                 model: {
                                     fields: {
+                                        id: { type: "int" },
                                         name: { type: "string" },
                                         surname: { type: "string" },
                                     }
@@ -82,7 +108,14 @@
                         }, {
                             field: "surname",
                             title: "Cognome"
-                        }]
+                        }, { command: { text: "Accedi alla paziente", click: function (e) {
+                                                e.preventDefault();
+                                                var data = this.dataItem($(e.target).closest("tr"));
+                                                window.location.href = '@Url.Action("RedirectPatient", "Medic")?patientId=' + data.id;
+                                            }
+                                        }
+                                , title: " "
+                            }]
                     });
                 });
             </script>
