--- a/KCASM_AppWeb/KCASM_AppWeb/Views/Shared/_Layout.cshtml
+++ b/KCASM_AppWeb/KCASM_AppWeb/Views/Shared/_Layout.cshtml
@@ -7,75 +7,78 @@
 
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>@ViewData["Title"] - Keep Calm And Stay Mom</title>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>@ViewData["Title"] - Keep Calm And Stay Mom</title>
 
-        <environment include="Development">
-            <link rel="stylesheet" href="~/default/lib/bootstrap/dist/css/bootstrap.css" />
-            <link rel="stylesheet" href="~/default/css/site.css" />
-        </environment>
-        <environment exclude="Development">
-            <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
-                  asp-fallback-href="~/default/lib/bootstrap/dist/css/bootstrap.min.css"
-                  asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-            <link rel="stylesheet" href="~/default/css/site.min.css" asp-append-version="true" />
-        </environment>
+    <environment include="Development">
+        <link rel="stylesheet" href="~/default/lib/bootstrap/dist/css/bootstrap.css" />
+        <link rel="stylesheet" href="~/default/css/site.css" />
+    </environment>
+    <environment exclude="Development">
+        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
+              asp-fallback-href="~/default/lib/bootstrap/dist/css/bootstrap.min.css"
+              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
+        <link rel="stylesheet" href="~/default/css/site.min.css" asp-append-version="true" />
+    </environment>
 
 
-        <link href="~/kendo/@kendo.Version/styles/kendo.common.min.css" rel="stylesheet" />
-        <link href="~/kendo/@kendo.Version/styles/kendo.material.min.css" rel="stylesheet" />
-        <link href="~/kendo/@kendo.Version/styles/kendo.default.min.css" rel="stylesheet" />
-        <link href="~/kendo/@kendo.Version/styles/kendo.default.mobile.min.css" rel="stylesheet" />
+    <link href="~/kendo/@kendo.Version/styles/kendo.common.min.css" rel="stylesheet" />
+    <link href="~/kendo/@kendo.Version/styles/kendo.material.min.css" rel="stylesheet" />
+    <link href="~/kendo/@kendo.Version/styles/kendo.default.min.css" rel="stylesheet" />
+    <link href="~/kendo/@kendo.Version/styles/kendo.default.mobile.min.css" rel="stylesheet" />
 
-        <script src="~/kendo/@kendo.Version/js/jquery.min.js"></script>
-        <script src="~/kendo/@kendo.Version/js/kendo.all.min.js"></script>
 
-    </head>
-    <body>
-        <header>
-            @{await Html.RenderPartialAsync("Navbar"); }
-        </header>
-        <main role="main" class="container">
-            @RenderBody()
-        </main>
-        @{await Html.RenderPartialAsync("Footer"); }
-        @RenderSection("Scripts", required: false)
+    <script src="~/kendo/@kendo.Version/js/jquery.min.js"></script>
+    <script src="~/kendo/@kendo.Version/js/kendo.all.min.js"></script>
 
-        <style>
+</head>
+<body>
+    <header>
+        @{await Html.RenderPartialAsync("Navbar"); }
+    </header>
+    <main role="main" class="container">
+        @RenderBody()
+    </main>
+    @{await Html.RenderPartialAsync("Footer"); }
+    @RenderSection("Scripts", required: false)
 
-            body, html {
-                background-repeat: no-repeat;               
-                background-color: rgb(251, 255, 200);
-            }
+    <style>
 
-            html {
-                position: relative;
-                min-height: 100%;
-            }
+        body, html {
+            background-repeat: no-repeat;
+            background-color: rgb(251, 255, 197);
+        }
 
-            body {              
-                margin-bottom: 60px;
-            }
+        html {
+            position: relative;
+            min-height: 100%;
+        }
 
-            .error-message {
-                color: rgb(42, 42, 42);
-            }
+        body {
+            margin-bottom: 60px;
+        }
 
-            .footer {
-                background-color: rgb(34,34,34);
-                color: white;
-                position: absolute;
-                bottom: 0;
-                width: 100%;
-                /* Set the fixed height of the footer here */
-                height: 60px;
-                line-height: 60px; /* Vertically center the text there */
-                text-align: center;
-                color: white;
-            }
-        </style>
+        .error-message {
+            color: rgb(42, 42, 42);
+        }
 
-    </body>
+        .footer {
+            background-color: rgb(34,34,34);
+            color: white;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            /* Set the fixed height of the footer here */
+            height: 60px;
+            line-height: 60px; /* Vertically center the text there */
+            text-align: center;
+            color: white;
+        }
+    </style>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+</body>
 </html>
